# fastmcp-Cocson-registroES

./: Dockerfile  N8N_COMPATIBILITY.md
mcp_acceso/: .env.example  Dockerfile  README.md  __init__.py  database.py  easypanel.json  mcp_acceso.fastmcp.json  pyproject.toml  server.py  utils.py
