[project]
name = "mcp-reportes-acceso"
version = "1.0.0"
description = "Servidor MCP para consultas de control de acceso y reportes de nómina"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "asyncpg>=0.29.0",
    "pytz>=2024.1",
]

[project.scripts]
mcp-acceso = "server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
